--- a/world/index.html
+++ b/world/index.html
@@ -18,7 +18,8 @@
                    accept=".world"
                    onchange="load(event)"
                 />
-</label>
+            </label>
+            <button onclick="openOsmPanel()">🗺️</button>
             &nbsp;
             <button id="graphBtn" onclick="setMode('graph')">🌐</button>
             <button id="stopBtn" onclick="setMode('stop')">🛑</button>
@@ -28,6 +29,15 @@
             <button id="lightBtn" onclick="setMode('light')">🚦</button>
             <button id="startBtn" onclick="setMode('start')">🚙</button>
             <button id="targetBtn" onclick="setMode('target')">🎯</button>
+
+            <div id="osmPanel" style="display:none;">
+                <textarea id="osmDataContainer" rows="10" cols="50"
+                    placeholder="Paste OSM data here"></textarea>
+                <div>
+                    <button onclick="parseOsmData()">✔️</button>
+                    <button onclick="closeOsmPanel()">❌</button>
+                </div>
+            </div>
         </div>
 
         <script src="js/world.js"></script>
@@ -53,6 +63,7 @@
         <script src="js/items/building.js"></script>
         <script src="js/math/utils.js"></script>
         <script src="js/math/graph.js"></script>
+        <script src="js/math/osm.js"></script>
         <script src="js/primitives/point.js"></script>
         <script src="js/primitives/segment.js"></script>
         <script src="js/primitives/polygon.js"></script>
@@ -128,25 +139,25 @@
                 localStorage.setItem("world", JSON.stringify(world));
             }
 
-         function load(event) {
-            const file = event.target.files[0];
+            function load(event) {
+                const file = event.target.files[0];
 
-            if (!file) {
-               alert("No file selected.");
-               return;
+                if (!file) {
+                    alert("No file selected.");
+                    return;
+                }
+                        
+                const reader = new FileReader();
+                reader.readAsText(file);
+
+                reader.onload = (evt) => {
+                    const fileContent = evt.target.result;
+                    const jsonData = JSON.parse(fileContent);
+                    world = World.load(jsonData);
+                    localStorage.setItem("world", JSON.stringify(world));
+                    location.reload();
+                }
             }
-
-            const reader = new FileReader();
-            reader.readAsText(file);
-
-            reader.onload = (evt) => {
-               const fileContent = evt.target.result;
-               const jsonData = JSON.parse(fileContent);
-               world = World.load(jsonData);
-               localStorage.setItem("world", JSON.stringify(world));
-               location.reload();
-            }
-         }
 
             function setMode(mode) {
                 dissableEditors();
@@ -161,6 +172,25 @@
                     tool.button.style.filter = "grayscale(100%)";
                     tool.editor.disable();
                 }
+            }
+
+            function openOsmPanel() {
+                osmPanel.style.display = "block";
+            }
+
+            function closeOsmPanel() {
+                osmPanel.style.display = "none";
+            }
+
+            function parseOsmData() {
+                if (osmDataContainer.value == "") {
+                    alert("Paste data first");
+                    return;
+                }
+                const res = Osm.parseRoads(JSON.parse(osmDataContainer.value));
+                graph.points = res.points;
+                graph.segments = res.segments;
+                closeOsmPanel();
             }
         </script>
     </body>
